# hclib

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile.am  NOTICE  README  README.md  README_cmake  README_orig.md  _config.yml  bootstrap.sh  clean.sh  clean_orig.sh  clobber.sh  configure.ac  documentation.md  index.html  index.md  install.sh  installation.md  installwithupc.sh  multi-install.sh  overview.html  programming.html
cmake/: hclibConfig.cmake.in  hclib_config.h.cmake
ctx-strategies/: .gitignore  benchmarks.txt  build-all.sh  configs.sh  run-all.sh
ctx-strategies/cholesky/: .gitignore  Makefile  cholesky.cpp  cholesky.hc  input  nb_cholesky.cpp  run.sh
ctx-strategies/cilksort/: .gitignore  Makefile  cilksort.cpp  cilksort.hc  getoptions.c  getoptions.h  nb_cilksort.cpp
ctx-strategies/common/: benchmark_timing.h  common.mk  run.sh
ctx-strategies/fib/: .gitignore  Makefile  cilk_fib.c  cxx_fib.cpp  escaping_fib.cpp  extra_runs.sh  fib.c  fib.cpp  fib.hc  heap_args_fib.c  hpx_fib.c  nb_fib.c  nb_fib.cpp  omp_fib.c  overhead_runs.sh
docs/: _config.yml  about.md  documentation.md  index.md  installation.md
hpt/: hpt-congaree-nogpu.xml  hpt-congaree.xml  hpt-davinci.xml  hpt-edison.xml  hpt-four-places.xml  hpt-max-macbook.xml  hpt-one-mem-place-two-cache-places.xml  hpt-single-place.xml  hpt-testing.xml  hpt-three-places.xml  hpt-titan-nogpu.xml  hpt-two-places.xml  hpt.dtd
inc/: hclib-async-struct.h  hclib-async.h  hclib-async.hpp  hclib-asyncAwait.h  hclib-asyncStruct.h  hclib-ddf.h  hclib-forasync.h  hclib-forasync.hpp  hclib-future.hpp  hclib-instrument.h  hclib-isolated-overloading.h  hclib-isolated.h  hclib-locality-graph.h  hclib-module.h  hclib-place.h  hclib-promise.h  hclib-promise.hpp  hclib-rt.h  hclib-task.h  hclib-timer.h  hclib-worker-config.h  hclib.h  hclib.hpp  hclib.mak.in  hclib_atomic.h  hclib_common.h  hclib_config.h.cmake.in  hclib_config.h.in  hclib_cpp.h  hclib_future.h  hclib_promise.h  hcpp-async.h  hcpp-asyncAwait.h  hcpp-asyncPhased.h  hcpp-asyncStruct.h  hcpp-ddf.h  hcpp-forasync.h  hcpp-hpt.h  hcpp-mm.h  hcpp-place.h  (+12 more)
inc/hcpp-mak/: hcpp.mak
locality_graphs/: congaree.json  congaree.no_interconnect.json  congaree.no_interconnect.no_gpu.json  cori.json  cori_one_worker.json  davinci.json  davinci.no_gpu.json  davinci.no_gpu.one_worker.json  edison.flat.json  edison.json  edison.no_interconnect.flat.json  edison.no_interconnect.json  empty.json  hickok.json  hickok.no_interconnect.json  macbook.8cores.json  po.json  po.no_gpu.json  summit.json  titan.no_gpu.json  titan.no_gpu.no_interconnect.json
machine-configs/: mach-hcpp-12w.cfg  mach-hcpp-16w.cfg  mach-hcpp-1w.cfg  mach-hcpp-2w.cfg  mach-hcpp-8w.cfg
modules/: make-all.sh
modules/system/: CMakeLists.txt  Makefile
modules/system/inc/: hclib_system.h  hclib_system.mak  hclib_system.post.mak
modules/system/src/: hclib_system.cpp
modules/system/test/: Makefile  allocate.cpp  init.cpp
scripts/: build.sh  clean.sh  congaree.sh  gen-generic-asyncAwait-cpp.pl  gen-generic-asyncAwait-header.pl  gen-generic-asyncAwait.pl  gen-generic-asyncPhased-cpp.pl  gen-generic-asyncPhased-header.pl  gen-generic-asyncPhased.pl  gen-generic-isolated.pl  hclib-options  max.congaree.setup.sh  max.davinci.setup.sh  max.edison.setup.sh  max.macbook.setup.sh  max.titan.setup.sh  run-test-matrix.sh  setMeFirst.csh  setMeFirst.sh  setup.sh  ship.sh
src/: CMakeLists.txt  Makefile.am  asyncAwait.cpp  asyncPhased.cpp  hashmap.c  hclib-ddf.c  hclib-deque.c  hclib-fptr-list.c  hclib-hpt.c  hclib-instrument.c  hclib-isolated.c  hclib-locality-graph.c  hclib-mem.c  hclib-promise.c  hclib-runtime.c  hclib-thread-bind.c  hclib-timer.c  hclib-tree.c  hclib.c  hclib.cpp  hclib_atomic.c  hclib_cpp.cpp  hclib_module.c  hclib_module.cpp  hcpp-ddf.c  hcpp-ddf.cpp  hcpp-deque.c  hcpp-deque.cpp  hcpp-hpt.c  hcpp-hpt.cpp  hcpp-mm.cpp  hcpp-runtime.c  hcpp-runtime.cpp  hcpp-thread-bind.c  hcpp-thread-bind.cpp  hcpp-timer.c  hcpp-timer.cpp  hcpp-tree.c  hcshmem-support.c  hcupc-support.c  (+2 more)
src/fcontext/: README  fcontext.h  jump_riscv64_sysv_elf_gas.S  make_riscv64_sysv_elf_gas.S
src/inc/: hashmap.h  hashmap_extension.h  hclib-atomics.h  hclib-cuda.h  hclib-deque.h  hclib-finish.h  hclib-fptr-list.h  hclib-hpt.h  hclib-internal.h  hclib-tree.h  hcpp-atomics.h  hcpp-cuda.h  hcpp-deque.h  hcpp-finish.h  hcpp-hpt.h  hcpp-internal.h  hcpp-mm-impl.h  hcpp-tree.h  litectx.h
test/cholesky/: .gitignore  CMakeLists.txt  Makefile  cholesky.cpp  fetch_input.sh  header.h  run.sh  sequential_cholesky.cpp  trisolve.cpp  update_diagonal.cpp  update_nondiagonal.cpp
test/cholesky/input/: cholesky_out_100.txt  cholesky_out_200.txt  cholesky_out_300.txt  cholesky_out_400.txt  cholesky_out_50.txt  cholesky_out_500.txt  m_10.in  m_100.in  m_200.in  m_300.in  m_400.in  m_50.in  m_500.in
test/cpp/: .gitignore  CMakeLists.txt  Makefile  access_argc.cpp  async0.cpp  async1.cpp  atomic.cpp  atomic_sum.cpp  boot0.cpp  capture0.cpp  capture1.cpp  copies0.cpp  copies1.cpp  edison.slurm  finish0.cpp  finish1.cpp  finish2.cpp  forasync1DCh.cpp  forasync1DRec.cpp  forasync2DCh.cpp  forasync2DRec.cpp  forasync3DCh.cpp  forasync3DRec.cpp  future_wait_in_finish.cpp  neconlce1.cpp  nested_finish.cpp  nested_finish_async_await.cpp  no_async_finish.cpp  test_all.sh
test/cpp/accumulator/: accum_lazy0.cpp  accum_lazy1.cpp
test/cpp/ddf/: asyncAwait0.cpp  asyncAwait0Null.cpp  asyncAwait1.cpp  future0.cpp  future1.cpp  future2.cpp  future3.cpp
test/cpp/phaser/: phaser0.cpp  phaser0_verify.cpp  phaser1.cpp  phaser2.cpp  phaser4.cpp  phaser5.cpp
test/cpp/promise/: CMakeLists.txt  asyncAwait0.cpp  asyncAwait0Null.cpp  asyncAwait0Shared.cpp  asyncAwait0Unique.cpp  asyncAwait0Vector.cpp  asyncAwait1.cpp  async_future_await_at.cpp  future0.cpp  future0Float.cpp  future0Int.cpp  future1.cpp  future2.cpp  future3.cpp  future4.cpp  future5.cpp
tools/: .gitignore  Makefile  common.cpp  common.h  hclib_instrument_parser.c  hpt_visualizer.cpp  hwloc_to_hpt.cpp  hwloc_visualizer.cpp  mean.py  median.py  std.py  timeline.py
(+2133 files in other folders)
